# zeropoint

./: .gitignore  .zp-configure.toml  ARCHITECTURE-V2.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  CloudflareDoH.mobileconfig  Dockerfile  GOVERNANCE.md  Justfile  LICENSE-APACHE  LICENSE-MIT  Mastra-ZeroPoint-Analysis.docx  README.md  SDK-DESIGN.md  SECURITY.md  agent-zero-integration-plan.md  audio-manifest.json  create_pdf_direct.py  create_whitepaper.sh  deploy-dashboard.sh  dns-monitor.py  generate-audio-onboard.sh  generate-audio.sh  generate-footprint-audio.sh  generate-narration-onboard.py  generate-narration.py  generate-playground-audio.sh  generate-playground-narration.py  generate_pdf.py  github-release-notes.md  narration-script-onboard.txt  narration-script.txt  nomadnet-course.mu  package-lock.json  package.json  patch-act3.py  (+22 more)
crates/course-examples/: Cargo.toml  README.md
crates/course-examples/examples/: lab01_first_key.rs  lab02_signing.rs  lab03_capability_grants.rs  lab04_delegation_chains.rs  lab05_policy_engine.rs  lab06_governance_gate.rs  lab07_receipts.rs  lab08_audit_trail.rs  lab09_discovery.rs  lab10_presence_plane.rs  lab11_adversarial.rs  lab12_reputation.rs  lab13_consensus.rs  lab14_epoch_compaction.rs  lab15_wasm_policy.rs  lab16_capstone.rs
crates/course-examples/src/: lib.rs
crates/execution-engine/: Cargo.toml  README.md
crates/execution-engine/src/: engine.rs  executor.rs  receipt.rs  sandbox.rs
crates/execution-engine/tests/: integration_test.rs
crates/mle-star-engine/: Cargo.toml
crates/mle-star-engine/src/: config.rs  engine.rs  estimation.rs  hypothesis.rs  lib.rs  stores.rs  traits.rs  types.rs
crates/monte-carlo-engine/: Cargo.toml
crates/monte-carlo-engine/src/: confidence.rs  config.rs  distribution.rs  engine.rs  lib.rs  risk.rs  sampling.rs  significance.rs  traits.rs  types.rs
crates/trust-triangle/: Cargo.toml  NARRATIVE.md  README.md  new-engine.js
crates/trust-triangle/audio-segments/: README.md
crates/trust-triangle/src/: clinic.rs  data.rs  display.rs  http_api.rs  lib.rs  node.rs  patient.rs  pharmacy.rs  types.rs
crates/zp-agent-bridge/: Cargo.toml
crates/zp-agent-bridge/src/: audit_bridge.rs  delegation_bridge.rs  lib.rs  mesh_bridge.rs  quorum_bridge.rs  sovereignty_bridge.rs
crates/zp-anchor/: Cargo.toml
crates/zp-anchor/src/: lib.rs
crates/zp-audit/: Cargo.toml  README.md
crates/zp-audit/src/: catalog_verify.rs  chain.rs  collective_audit.rs  lib.rs  notify.rs  reconstitute.rs  recovery.rs  revocation.rs  scrub.rs  signer.rs  store.rs  verifier.rs
crates/zp-bench/: Cargo.toml
crates/zp-bench/benches/: governance_gate.rs
crates/zp-cli/: Cargo.toml  README.md  build.rs
crates/zp-cli/src/: commands.rs  configure.rs  emit.rs  guard.rs  init.rs  main.rs  mesh_commands.rs  onboard.rs  policy_commands.rs  recover.rs  secure.rs  shell.rs
crates/zp-config/: Cargo.toml
crates/zp-config/src/: error.rs  lib.rs  provenance.rs  resolve.rs  schema.rs  topology.rs  upstream.rs  validate.rs
crates/zp-configure/: Cargo.toml
crates/zp-configure/src/: lib.rs
crates/zp-discipline/: Cargo.toml
crates/zp-discipline/src/: lib.rs
crates/zp-discipline/tests/: no_direct_verify_strict_outside_helper.rs  no_non_strict_ed25519_verify.rs  no_raw_home_lookup.rs  no_raw_keychain_service_strings.rs  no_serde_preserve_order.rs  no_std_fs_write_in_keyring.rs
crates/zp-engine/: Cargo.toml
crates/zp-engine/src/: capability.rs  configure.rs  discovery.rs  lib.rs  providers.rs  scan.rs  tool_scan_security.rs  validate.rs  vault.rs
crates/zp-hardening-tests/: Cargo.toml
crates/zp-hardening-tests/src/: harness.rs  lib.rs  payloads.rs
crates/zp-hardening-tests/tests/: phase0_1_auth.rs  phase0_2_injection.rs  phase0_3_audit.rs  phase0_4_capabilities.rs  phase0_5_onboard.rs  phase0_6_csp.rs
crates/zp-introduction/: Cargo.toml  README.md
crates/zp-introduction/src/: error.rs  lib.rs  protocol.rs  request.rs  response.rs
crates/zp-keys/: Cargo.toml  README.md
crates/zp-keys/src/: audit_signer.rs  biometric.rs  blast_radius.rs  certificate.rs  error.rs  genesis_v2.rs  hierarchy.rs  keyring.rs  lib.rs  recovery.rs  revocation.rs  rotation.rs  secret_file.rs  test_helpers.rs  vault_key.rs
crates/zp-learning/: Cargo.toml  IMPLEMENTATION.md  INDEX.md
crates/zp-learning/src/: detector.rs  lib.rs  proposal.rs
crates/zp-llm/: Cargo.toml  INDEX.md  README.md
crates/zp-llm/src/: pool.rs  validator.rs
crates/zp-memory/: Cargo.toml
crates/zp-memory/src/: compromise.rs  ingestion.rs  lib.rs  lifecycle.rs  promotion.rs  quarantine.rs  review.rs  sharing.rs  types.rs
crates/zp-mesh/: Cargo.toml
crates/zp-mesh/src/: capability_exchange.rs  consensus.rs  discovery.rs  envelope.rs  error.rs  identity.rs  interface.rs  lib.rs  node_registry.rs  packet.rs  peer_keystore.rs  policy_distributor.rs  reputation.rs  reticulum_discovery.rs  runtime.rs  store.rs  tcp.rs  transport.rs  web_discovery.rs
crates/zp-mesh/tests/: hdlc_interop.rs  load_test.rs
crates/zp-observation/: Cargo.toml
crates/zp-observation/src/: config.rs  governance_bridge.rs  lib.rs  observer.rs  pipeline.rs  receipts.rs  reflector.rs  store.rs  types.rs
crates/zp-pipeline/: Cargo.toml  README.md
crates/zp-pipeline/src/: config.rs  mesh_bridge.rs  pipeline.rs
crates/zp-pipeline/tests/: integration.rs
crates/zp-policy/: Cargo.toml  README.md
crates/zp-policy/src/: downgrade.rs  engine.rs  gate.rs  lib.rs  policy_registry.rs  rules.rs  wasm_runtime.rs
crates/zp-preflight/: Cargo.toml
crates/zp-preflight/src/: checks.rs  lib.rs  main.rs  platform.rs  report.rs  runner.rs
crates/zp-receipt/: Cargo.toml  README.md
crates/zp-receipt/src/: builder.rs  canonical.rs  chain.rs  epoch.rs  hasher.rs  (+11 more)
crates/zp-server/: ARCHITECTURE.md  Cargo.toml  README.md  build.rs
crates/zp-skills/: Cargo.toml  README.md
zeropoint-py/: README.md  pyproject.toml
zeropoint-py/tests/: conftest.py  test_client.py  test_governance.py  test_receipts.py  test_security.py  test_tools.py
(+490 files in other folders)
