[workspace]
resolver = "2"

members = [
    "crates/zp-core",
    "crates/zp-audit",
    "crates/zp-policy",
    "crates/zp-keys",
    "crates/zp-introduction",
    "crates/zp-llm",
    "crates/zp-pipeline",
    "crates/zp-skills",
    "crates/zp-trust",
    "crates/zp-learning",
    "crates/zp-mesh",
    "crates/zp-engine",
    "crates/zp-server",
    "crates/zp-cli",
    "crates/zp-receipt",
    "crates/zp-verify",
    "crates/execution-engine",
    "policies/default-gate",
    "crates/course-examples",
    "crates/mle-star-engine",
    "crates/monte-carlo-engine",
    # "crates/zp-agent-bridge",  # temporarily excluded: depends on missing cross-workspace path
    "crates/zp-observation",
    "crates/zp-preflight",
    "crates/zp-config",
    "crates/zp-hardening-tests",
    "crates/zp-anchor",
    "crates/zp-memory",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ZeroPoint Ecosystem Team <team@zeropoint.foundation>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/zeropoint-foundation/zeropoint"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Cryptography
ed25519-dalek = { version = "2.0", features = ["rand_core", "serde"] }
blake3 = { version = "1.5", features = ["serde"] }
rand = "0.8"
chacha20poly1305 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# WASM runtime
wasmtime = "27.0"

# HTTP client (for LLM APIs)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "gzip", "brotli", "deflate"] }

# HTTP server
axum = { version = "0.7", features = ["tokio", "json", "ws"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# UUID
uuid = { version = "1.10", features = ["v4", "v7", "serde"] }

# Versioning
semver = { version = "1.0", features = ["serde"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Concurrency
dashmap = "5.5"
parking_lot = "0.12"

# Encoding
hex = "0.4"
base64 = "0.22"
rmp-serde = "1.3"

# Key exchange (Reticulum mesh transport)
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
sha2 = "0.10"
hkdf = "0.12"
aes = "0.8"
cbc = "0.1"
hmac = "0.12"

# OS credential store (Keychain / Secret Service / Credential Manager)
keyring = { version = "3", features = ["apple-native", "sync-secret-service", "windows-native"] }

# Hardware wallet: Trezor
trezor-client = { version = "0.1", default-features = false }

# macOS Security.framework — Keychain with biometric access control (v0.2)
security-framework = "2.11"
security-framework-sys = "2.11"
core-foundation = "0.9"
core-foundation-sys = "0.8"

# Regex
regex = "1.10"

# Testing
tokio-test = "0.4"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true
