[package]
name = "execution-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ZeroPoint Deterministic Execution Engine — sandboxed polyglot code execution without Docker"

[lib]
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "process", "io-util", "time", "fs"] }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Cryptography (for execution receipts)
blake3 = { workspace = true }
sha2 = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Time handling
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Temp directories for sandboxed execution
tempfile = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
