[package]
name = "mle-star-engine"
version.workspace = true
edition.workspace = true
description = "MLE STAR inspired expertise pre-learning engine for ZeroPoint"
license.workspace = true

[dependencies]
# Statistical distributions
statrs = "0.16"

# Linear algebra for MLE
nalgebra = "0.29"

# Random number generation
rand = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Time
chrono = { workspace = true }

# Concurrency
parking_lot = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
approx = "0.5"
