[package]
name = "zp-agent-bridge"
description = "Bridge between agent-zp governance wrappers and ZeroPoint's native audit/sovereignty systems"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# ZeroPoint crates
zp-core = { path = "../zp-core" }
zp-audit = { path = "../zp-audit" }
zp-keys = { path = "../zp-keys" }
zp-receipt = { path = "../zp-receipt" }
zp-mesh = { path = "../zp-mesh" }

# Agent crate (cross-workspace path dependency)
agent-zp = { path = "../../../projects/claw-code-rust/crates/agent-zp" }

# Shared deps (ZP workspace versions)
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
