[package]
name = "zp-anchor"
version = "0.1.0"
edition = "2021"
description = "ZeroPoint Truth Anchor — pluggable DLT abstraction for external chain verification"
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
