[package]
name = "zp-audit"
version = "0.1.0"
edition = "2021"

[dependencies]
zp-core = { path = "../zp-core" }
rusqlite = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
rand = { workspace = true }
