[package]
name = "zp-audit"
version = "0.1.0"
edition = "2021"

[dependencies]
zp-core = { path = "../zp-core" }
zp-receipt = { path = "../zp-receipt" }
zp-verify = { path = "../zp-verify" }
rusqlite = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
regex = "1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }

[features]
pentest-demo = []
# Exposes test-only constructors (e.g. AuditStore::open_unsigned,
# AuditSigner::generate) to external test crates. Production builds must
# never enable this — open_signed is the only audit-store entry point.
test-support = []

[dev-dependencies]
tempfile = "3.8"
rand = { workspace = true }
