[package]
name = "zp-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "ZeroPoint v2 CLI — primary interface for developers"

[features]
default = ["os-keychain", "biometric-keychain", "embedded-server"]
embedded-server = ["dep:zp-server"]
policy-wasm = ["zp-policy/policy-wasm"]
os-keychain = ["zp-keys/os-keychain"]
biometric-keychain = ["zp-keys/biometric-keychain", "zp-server?/biometric-keychain"]
hw-trezor = ["zp-keys/hw-trezor"]
full = ["embedded-server", "policy-wasm", "os-keychain", "hw-trezor"]

[[bin]]
name = "zp"
path = "src/main.rs"

[dependencies]
# Local workspace crates
zp-config = { path = "../zp-config" }
zp-core = { path = "../zp-core" }
zp-engine = { path = "../zp-engine" }
zp-keys = { path = "../zp-keys" }
zp-mesh = { path = "../zp-mesh" }
zp-pipeline = { path = "../zp-pipeline" }
zp-trust = { path = "../zp-trust" }
zp-receipt = { path = "../zp-receipt" }
zp-policy = { path = "../zp-policy" }
zp-audit = { path = "../zp-audit" }
zp-verify = { path = "../zp-verify" }
zp-server = { path = "../zp-server", optional = true }

# Workspace dependencies
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# HTTP client for server communication (zp memory review, etc.)
reqwest.workspace = true

# Additional dependencies
ed25519-dalek.workspace = true
anyhow.workspace = true
blake3.workspace = true
hex.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
regex.workspace = true
toml.workspace = true

[dev-dependencies]
