[package]
name = "zp-keys"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "ZeroPoint key hierarchy — genesis → operator → agent key derivation, signing, and verification"

[dependencies]
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
