[package]
name = "zp-keys"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "ZeroPoint key hierarchy — genesis → operator → agent key derivation, signing, and verification"

[features]
default = ["os-keychain"]
os-keychain = ["keyring"]
# macOS biometric-gated Keychain via Security.framework (v0.2)
# When enabled, Keychain items get kSecAccessControlBiometryCurrentSet —
# the OS refuses to release the secret without a live biometric match.
biometric-keychain = ["dep:security-framework", "dep:security-framework-sys", "dep:core-foundation"]
# Cross-platform face enrollment via OpenCV webcam
face-enroll = ["dep:opencv"]
# v0.2 face embeddings: real cosine-similarity matching via ONNX model
# Requires face-enroll + a MobileFaceNet ONNX model at runtime
face-embeddings = ["face-enroll", "dep:tract-onnx", "dep:ndarray"]
# Hardware wallet providers
hw-yubikey = []
hw-ledger = []
hw-trezor = ["dep:trezor-client"]
hw-onlykey = []

[dependencies]
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }
uuid = { workspace = true }
chacha20poly1305 = { workspace = true }
keyring = { workspace = true, optional = true }
dirs = "5"

# Hardware wallet: Trezor (optional, behind hw-trezor feature)
trezor-client = { workspace = true, optional = true }

# OpenCV for face enrollment (optional, heavy dependency)
opencv = { version = "0.92", optional = true, default-features = false, features = ["videoio", "imgproc", "objdetect"] }

# ONNX inference for face embeddings (v0.2, pure Rust — no C deps)
tract-onnx = { version = "0.21", optional = true }
ndarray = { version = "0.15", optional = true }

# macOS Security.framework — Keychain with kSecAccessControlBiometryCurrentSet (v0.2)
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { workspace = true, optional = true }
security-framework-sys = { workspace = true, optional = true }
core-foundation = { workspace = true, optional = true }

# Linux biometric — whoami for username detection (fprintd-verify)
[target.'cfg(target_os = "linux")'.dependencies]
whoami = { version = "1.5" }

[dev-dependencies]
tempfile = { workspace = true }
