[package]
name = "zp-llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "LLM provider pool with risk-based routing for ZeroPoint v2"

[dependencies]
# ZeroPoint core
zp-core = { path = "../zp-core" }

# Async
async-trait.workspace = true
tokio.workspace = true
futures.workspace = true

# HTTP client
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Time
chrono.workspace = true
