[package]
name = "zp-observation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Receipt-backed observational memory for ZeroPoint agents"

[dependencies]
zp-core = { path = "../zp-core" }
zp-receipt = { path = "../zp-receipt" }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3.10"
