[package]
name = "zp-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
zp-core = { path = "../zp-core" }
zp-policy = { path = "../zp-policy" }
zp-skills = { path = "../zp-skills" }
zp-audit = { path = "../zp-audit" }
zp-llm = { path = "../zp-llm" }
zp-trust = { path = "../zp-trust" }
zp-mesh = { path = "../zp-mesh" }
zp-learning = { path = "../zp-learning" }
execution-engine = { path = "../execution-engine" }
zp-receipt = { path = "../zp-receipt" }

async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = "3"
