[package]
name = "zp-policy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "ZeroPoint Policy Engine - native Rust rules + optional WASM policy module runtime"

[features]
default = []
policy-wasm = ["dep:wasmtime"]

[dependencies]
zp-core = { path = "../zp-core" }
zp-audit = { path = "../zp-audit" }

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
chrono.workspace = true
uuid.workspace = true
blake3.workspace = true
wasmtime = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
# Tests that exercise WASM need the feature enabled — run with:
# cargo test -p zp-policy --features policy-wasm
