[package]
name = "zp-receipt"
version = "0.1.0"
edition = "2021"
description = "ZeroPoint Receipt — portable, cryptographically verifiable proof of execution"
license = "Apache-2.0"
readme = "README.md"

# Standalone crate: consumable by any Rust project without pulling in ZeroPoint.
# Minimal dependencies by design — this is a protocol primitive.

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1"
uuid = { version = "1", features = ["v7", "serde"] }

# Optional: Ed25519 signing/verification
ed25519-dalek = { version = "2", features = ["rand_core"], optional = true }
base64 = { version = "0.22", optional = true }
rand = { version = "0.8", optional = true }

# Optional: Post-quantum ML-DSA-65 signing (FIPS 204)
ml-dsa = { version = "0.1.0-rc", default-features = false, optional = true }

# Optional: OTEL span export
opentelemetry = { version = "0.21", optional = true }

[features]
default = ["signing"]
signing = ["dep:ed25519-dalek", "dep:base64", "dep:rand"]
pq-signing = ["signing", "dep:ml-dsa"]
otel = ["dep:opentelemetry"]

[dev-dependencies]
# F8 integration tests verify the algorithm-agile signature format
# end-to-end through the chain verifier.
zp-verify = { path = "../zp-verify" }
base64 = "0.22"
