[package]
name = "zp-server"
version = "0.1.0"
edition = "2021"

[features]
default = ["pentest-demo"]
# Turns on the /audit/tamper and /audit/restore demo routes and the
# narrow tamper API in zp-audit. Strip this feature for production
# builds. See crates/zp-audit/Cargo.toml and docs/audit-invariant.md.
pentest-demo = ["zp-audit/pentest-demo"]

[dependencies]
zp-core = { path = "../zp-core" }
zp-engine = { path = "../zp-engine" }
zp-keys = { path = "../zp-keys", features = ["os-keychain", "hw-trezor"] }
zp-pipeline = { path = "../zp-pipeline" }
zp-policy = { path = "../zp-policy" }
zp-audit = { path = "../zp-audit" }
zp-trust = { path = "../zp-trust" }
zp-receipt = { path = "../zp-receipt" }
mle-star-engine = { path = "../mle-star-engine" }
monte-carlo-engine = { path = "../monte-carlo-engine" }

axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
reqwest = { workspace = true }
dirs = "5"
which = "7"
shlex = "1"
parking_lot = { workspace = true }
toml = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
