[package]
name = "zp-server"
version = "0.1.0"
edition = "2021"

[features]
default = []
policy-wasm = ["zp-policy/policy-wasm"]
os-keychain = ["zp-keys/os-keychain"]
hw-trezor = ["zp-keys/hw-trezor"]
## Development-only features — NEVER enable in production builds.
## Exposes audit tamper/restore/clear endpoints for testing.
dev-tools = []
full = ["policy-wasm", "os-keychain", "hw-trezor"]

[dependencies]
zp-config = { path = "../zp-config" }
zp-core = { path = "../zp-core" }
zp-engine = { path = "../zp-engine" }
zp-keys = { path = "../zp-keys" }
zp-pipeline = { path = "../zp-pipeline" }
zp-policy = { path = "../zp-policy" }
zp-audit = { path = "../zp-audit" }
zp-trust = { path = "../zp-trust" }
zp-receipt = { path = "../zp-receipt" }
mle-star-engine = { path = "../mle-star-engine" }
monte-carlo-engine = { path = "../monte-carlo-engine" }

axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
reqwest = { workspace = true }
dirs = "5"
parking_lot = { workspace = true }
which = "7"
toml = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
