[package]
name = "zp-skills"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ZeroPoint v2 — skill registry and matching system"

[dependencies]
zp-core = { path = "../zp-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
semver = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
